[package]
name = "natpmp-rs"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.82.0"
authors = ["Kristof Mattei"]
description = "Rust seed application"
license-file = "LICENSE"
categories = ["starter", "end-to-end"]
keywords = ["integrity", "end-to-end", "starter", "docker", "release"]
repository = "https://github.com/kristof-mattei/natpmp-rs"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
pedantic = "warn"
cargo = "warn"
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[profile.dev.package.backtrace]
opt-level = 3

[features]
coverage = []

[dependencies]
bytes = "1.9.0"
color-eyre = { git = "https://github.com/kristof-mattei/eyre", branch = "bump-backtrace-rs", features = [
    "track-caller",
] }
thiserror = "2.0.4"
tokio = { version = "1.41.1", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = "0.2.1"
socket2 = "0.5.8"
libc = "0.2.167"
# netdev = "0.31.0"
zerocopy = { version = "0.8.12", features = ["derive"] }

# We compile the Docker container with musl to get a static library. Smaller, faster.
# BUT that means that we need to include openssl
# Documentation on the syntax:
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
[target.'cfg(all(target_arch = "x86_64", target_os="linux", target_env="musl"))'.dependencies]
# openssl = { version = "0.10.36", features = ["vendored"] }
