[package]
name = "natpmp-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
bytes = "1.11.1"
color-eyre = "0.6.5"
console-subscriber = { version = "0.5.0", optional = true }
mimalloc = { version = "0.1.48", features = ["v3"] }
socket2 = "0.6.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# netdev = "0.31.0"
zerocopy = { version = "0.8.38", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true
